# ai_auto_commit

./: .gitignore  CONTRIBUTING.md  LICENSE  PKGBUILD  PUBLISHING.md  README.md  ai-auto-commit.install  bump-version.sh  install-global.sh  output.txt  pyproject.toml  rebuild.sh
Formula/: ai-auto-commit.rb
ai_auto_commit/: .gitignore  __init__.py  ai_auto_commit.py  api_client.py  cli.py  commit_generation.py  git_operations.py  git_safety.py  heuristic_commits.py  large_diff_handler.py  llm_client.py  models.py  prompts.py  pyproject.toml  setup.py  token_budget.py  token_utils.py
ai_auto_commit/tests/: requirements.txt  test_faradhaven_mono_repo.py  test_mono_repo.py
chocolatey/: ai-auto-commit.nuspec
debian/: changelog  copyright  rules
flatpak/: com.github.yourusername.AIAutoCommit.desktop  com.github.yourusername.AIAutoCommit.metainfo.xml
packaging/: README.md  release_mgr.py  requirements.txt
packaging/templates/: chocolatey-uninstall.ps1.j2  debian-control.j2  flatpak-metainfo.xml.j2  install.ps1.j2  nuspec.xml.j2  scoop.json.j2  winget-locale.yaml.j2
release_packaging/: README.md  __init__.py  release_mgr.py  requirements.txt
release_packaging/templates/: Formula.rb.j2  PKGBUILD.j2  chocolatey-install.ps1.j2  debian-changelog.j2  debian-postinst.j2  flatpak.yaml.j2  install.sh.j2  nuspec.xml.j2  winget-installer.yaml.j2  winget-version.yaml.j2
scripts/: QUICK-START.md  README.md  clean.sh  local-release.sh  validate.sh
tests/: test_large_diff_handler.py
winget/manifests/: YourPublisher.AIAutoCommit.locale.en-US.yaml
