[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "ai-auto-commit"
version = "0.1.1"
description = "AI-powered git commit and push tool with interactive setup"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
keywords = [
    "git",
    "commit",
    "ai",
    "openai",
    "anthropic",
    "claude",
    "gemini",
    "automation",
    "cli",
    "developer-tools",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Utilities",
    "Environment :: Console",
]
dependencies = [
    "ai-model-picker>=0.1.0",
    "langchain-core>=0.1.0",
    "langchain-openai>=0.1.0",
    "langchain-anthropic>=0.1.0",
    "langchain-google-genai>=0.1.0",
    "langchain-mistralai>=0.1.0",
    "langchain-cohere>=0.1.0",
    "tiktoken>=0.5.0",
]

[project.license]
text = "MIT"

[project.urls]
Homepage = "https://github.com/yourusername/ai_auto_commit"
Repository = "https://github.com/yourusername/ai_auto_commit"
Issues = "https://github.com/yourusername/ai_auto_commit/issues"
Changelog = "https://github.com/yourusername/ai_auto_commit/releases"

[project.scripts]
autocommit = "ai_auto_commit.cli:main"

[tool.setuptools.packages.find]

[tool.package-metadata]
publisher = "Your Name"
publisher_email = "your.email@example.com"
github_username = "yourusername"
github_repo = "ai_auto_commit"
short_description = "AI-powered git commit and push tool with interactive setup"
long_description = "An intelligent, AI-powered git commit and push tool that automatically generates\nmeaningful commit messages from your staged changes. Works with multiple AI providers\nincluding OpenAI, Anthropic, Google, Mistral, and Cohere.\n"
features = [
    "AI-Powered Commit Messages: Automatically generates conventional commit messages",
    "Multi-Provider Support: Works with OpenAI, Anthropic, Google, Mistral, and Cohere",
    "Token Budget Management: Configurable token limits to control API costs",
    "Interactive Setup: User-friendly wizard for first-time configuration",
    "Smart Diff Analysis: Uses hierarchical analysis to understand complex changes",
    "Safety Features: Creates backups and verifies changes before committing",
]
post_install_message = "To get started, run the interactive setup wizard:\n  autocommit init\n\nThis will guide you through:\n  • Configuring AI provider API keys\n  • Setting your default model\n  • Configuring token budget\n\nFor more information:\n  autocommit --help\n"

[tool.package-metadata.debian]
section = "utils"
priority = "optional"

[tool.package-metadata.flatpak]
runtime = "org.freedesktop.Platform"
runtime_version = "23.08"

[tool.package-metadata.release-notes]
version = "0.1.1"
date = "2025-12-27"
notes = "Initial release with interactive setup wizard and multi-provider support.\n\n- Interactive setup wizard (autocommit init)\n- Support for 5 AI providers (OpenAI, Anthropic, Google, Mistral, Cohere)\n- Token budget management\n- Configuration stored in ~/.config/ai_auto_commit/config.json\n- Smart diff analysis\n- Safety features with backups\n"

[tool.package-metadata.checksums]
sha256 = ""
tarball_url = ""
